[package]
name = "yew_node_graph"
description = "A helper library to create interactive node graphs using yew"
homepage = "https://github.com/kkngsm/yew_node_graph"
repository = "https://github.com/kkngsm/yew_node_graph"
license = "MIT"
version = "0.4.0"
keywords = ["ui", "graph", "node"]
authors = ["kkngsm"]
edition = "2021"
readme = "../README.md"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde"]

[dependencies]
slotmap = { version = "1.0" }
smallvec = { version = "1.7.0" }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"
glam = "0.22.0"
stylist = { version = "0.12", features = ["yew_integration", "yew"] }
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
log = "0.4.17"
yew = "0.20.0"