[package]
authors = ["kkngsm"]
description = "A helper library to create interactive node graphs using yew"
edition = "2021"
homepage = "https://github.com/kkngsm/yew_node_graph"
keywords = ["ui", "graph", "node"]
license = "MIT"
name = "yew_node_graph"
readme = "../README.md"
repository = "https://github.com/kkngsm/yew_node_graph"
version = "0.4.0"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde"]

[dependencies]
glam = {version = "0.22.0", features = ["serde"]}
serde = {version = "1.0", optional = true, features = ["derive"]}
slotmap = {version = "1.0"}
smallvec = {version = "1.7.0"}
stylist = {version = "0.12", features = ["yew_integration", "yew"]}
thiserror = "1.0"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"

yew = "0.20.0"
